# gcm

./: .env.example  .gitignore  .gitmsg.example.yaml  .gitmsg.yaml  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
auto_gitmsg/: __init__.py  cli.py  llm_client.py  prompts.py
gcm/: __init__.py  cli.py  git_utils.py  llm_client.py  prompts.py
